--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                   <div class="navbar-header">
-                    <div class="navbar-brand" href="#">CP RULES</div>
+                    <div class="brand" href="#">CP RULES</div>
                   </div>
                   
                   <ul class="nav navbar-nav navbar-right">
