--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   </div>
                   
                   <ul class="nav navbar-nav navbar-right">
-                    <li class="btn btn-warning"> Generate</li>
+                    <button class="btn btn-warning"> Generate</button>
                    
                   </ul>
                 </div>
