--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <div class="left">
 
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">RULE TRIGGERS</a></li>
+                <li class="active1">RULE TRIGGERS</li>
                 <li><a href="#">In Session Event</a></li>
                 <li><a href="#"> Offline Event</a></li>
                 <li><a href="#">User Historical Ev.</a></li>
                 <li><a href="#">No Event</a></li>
             </ul>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">CRITERIA</a></li>
+                <li class="active1">CRITERIA</li>
                 <li><a href="#">Operator</a></li>
                 <li><a href="#">anyof</a></li>
                 <li><a href="#">allof</a></li>
@@ -44,13 +44,13 @@
                 <li><a href="#">matchSpecialties</a></li>
             </ul>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">ACTION</a></li>
+                <li class="active1">ACTION</li>
                 <li><a href="#">tactic</a></li>
                 <li><a href="#">randomTactic</a></li>
 
             </ul>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#">OTHERS</a></li>
+                <li class="active1">OTHERS</li>
                 <div id="others">
                     <li><a href="#">when</a></li>
                     <li><a href="#">if</a></li>
