--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <table id="main" cellpadding="0" cellspacing="0" border="0">
         <tr class="header">
             <td style="width: 250px; padding-left:1em;"><h1>CP <em style="font-family:'Times New Roman', Times, serif;">Rules</em></h1></td>
-            <td style="width: calc( 100% - 350px ); text-align:right;padding-right: 1em;"><button class="genscript">Generate Script</button></td>
+            <td style="width: calc( 100% - 350px ); text-align:right;padding-right: 1em;"><button class="genscript" onclick="genscript()">Generate Script</button></td>
         </tr>
         <tr>
             <td class="left-block">
@@ -58,7 +58,13 @@
             </td>
         </tr>
     </table>
-
+<div id="overlay">
+    <pre>
+        <textarea id="output" readonly></textarea>
+        
+    </pre>
+    <div style="width:60%; margin:auto; text-align:right; padding: 5px 20px; box-sizing:border-box;"><button onclick="doCopy('output')">Copy</button> <button onclick="doClose('overlay')">Close</button></div>
+</div>
 <script src="plain.js"></script>
 </body>
 </html>
