changes and optimization

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             </td>
         </tr>
     </table>
-
+   
+<script type="text/javascript" src="./conditions.js"></script>
+<script type="text/javascript" src="./alldragElemets.js"></script>
 <script src="plain.js"></script>
 </body>
 </html>
