--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <table id="main" cellpadding="0" cellspacing="0" border="0">
         <tr class="header">
             <td style="width: 250px; padding-left:1em;"><h1>CP <em style="font-family:'Times New Roman', Times, serif;">Rules</em></h1></td>
-            <td style="width: calc( 100% - 350px ); text-align:right;padding-right: 1em;"><button class="genscript" onclick="genscript()">Generate Script</button></td>
+            <td style="width: calc( 100% - 350px ); text-align:right;padding-right: 1em;"><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="doCopy()">Generate</button></td>
         </tr>
         <tr>
             <td class="left-block">
@@ -67,12 +67,34 @@
         <textarea id="output" readonly></textarea>
         
     </pre>
-    <div style="width:60%; margin:auto; text-align:right; padding: 5px 20px; box-sizing:border-box;"><button onclick="doCopy('output')">Copy</button> <button onclick="doCloseOutput('overlay')">Close</button></div>
+    <div style="width:60%; margin:auto; text-align:right; padding: 5px 20px; box-sizing:border-box;"><button onclick="doCopy('copy')">click</button> <button onclick="doCloseOutput('overlay')">Close</button></div>
 </div>
+<script type="text/javascript" src="./backend/app.js"></script>
 <script src="plain.js"></script>
 <script type="text/javascript" src="./Dependencies/conditions.js"></script>
 <script type="text/javascript" src="./Dependencies/alldragElemets.js"></script>
 <script type="text/javascript" src="./Dependencies/ForEvent.js"></script>
 <script type="text/javascript" src="./Dependencies/Dropdown.js"></script>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" onclick="delnodes()" >&times;</button>
+          <h4 class="modal-title">Output</h4>
+        </div>
+        <div class="modal-body" id="forOutput"> </div>
+       
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" onclick="delnodes()" data-dismiss="modal">Close</button>
+          <button type="button" id="download" class="btn btn-success" onclick="log()" >Import</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
